# quant_project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  quant-project-scaffold-filelist.txt
.github/workflows/: tests.yml
configs/: app.yaml  providers.yaml  storage.yaml
configs/feature_sets/: core_v1.yaml
configs/universe/: core_equity_etf.yaml
docs/: ARCHITECTURE_SNAPSHOT.md  OPS_CORPORATE_ACTION_FACTOR_RUNBOOK.md
scripts/: init_db.py  run_single_date_eod.py
src/quant/bootstrap/: __init__.py  config_loader.py  container.py  logging_setup.py  settings.py
src/quant/cli/: eod.py  main.py
tests/: test_adjustment_factor_rules.py  test_build_price_adjustment_factor_job_preflight.py  test_catchup_date_discovery_service.py  test_catchup_inclusion_policy.py  test_cli_catchup_defaults.py  test_cli_preflight_command.py  test_cli_preflight_summary.py  test_config_loader.py  test_corporate_action_catchup_pipeline.py  test_corporate_action_event_mapper.py  test_corporate_action_event_type_policy.py  test_corporate_action_ingestion_service.py  test_dart_client_transport.py  test_dart_provider_payload_contract.py  test_factor_builder_service_integration.py  test_job_execute_signature.py  test_parquet_paths.py  test_pipeline_aggregation.py  test_platform_preflight_service.py  test_postgres_corporate_action_integration.py  test_preflight_metadata.py  test_provider_modes.py  test_research_ready_service_policy.py  test_result_and_enums.py  test_single_date_eod_integration_fixture.py  test_update_research_ready_status_job_preflight.py  test_validation_rules.py
(+89 files in other folders)
