[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-project"
version = "0.1.0"
description = "Local-first quant research and trading platform for Korean equities and ETFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1",
  "PyYAML>=6",
  "SQLAlchemy>=2",
  "psycopg[binary]>=3.1",
  "pandas>=2",
  "pyarrow>=15",
  "duckdb>=1",
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
quant = "quant.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
